# CSCE-642-Rocket-League-RL

./: .gitignore  1v0.py  README.md  game records.xlsx  plr_state.json  requirements.txt  train.slurm
rocket_league_rl/: pyproject.toml
rocket_league_rl/rlgym/rocket_league/action_parsers/: lookup_table_action.py  repeat_action.py
rocket_league_rl/rlgym/rocket_league/api/: car.py  game_state.py
rocket_league_rl/rlgym/rocket_league/done_conditions/: all_condition.py  any_condition.py  goal_condition.py  no_touch_condition.py  noop_condition.py  timeout_condition.py
rocket_league_rl/rlgym/rocket_league/obs_builders/: default_obs.py
rocket_league_rl/rlgym/rocket_league/reward_functions/: combined_reward.py  goal_reward.py  touch_reward.py
rocket_league_rl/rlgym/rocket_league/rlviser/: rlviser_renderer.py
rocket_league_rl/rlgym/rocket_league/sim/: rocketsim_engine.py
rocket_league_rl/rlgym/rocket_league/state_mutators/: fixed_team_size_mutator.py  kickoff_mutator.py  mutator_sequence.py
rocket_league_rl/rlgym_ppo/: learner.py
rocket_league_rl/rlgym_ppo/batched_agents/: batched_agent.py  batched_agent_manager.py  comm_consts.py
rocket_league_rl/rlgym_ppo/ppo/: continuous_policy.py  multi_discrete_policy.py  ppo_learner.py
rocket_league_rl/rlgym_tools/rocket_league/math/: ball.py  gamma.py  inverse_aerial_controls.py  relative.py  skellam.py  solid_angle.py
rocket_league_rl/rlgym_tools/rocket_league/reward_functions/: __init__.py  advanced_touch_reward.py  aerial_distance_reward.py  (+15 more)
rocket_league_rl/rlviser_py/: __init__.py  rlviser_py.pyd
(+173 files in other folders)
